--- a/custom.scss
+++ b/custom.scss
@@ -1,18 +1,7 @@
 /*-- scss:defaults --*/
 // import google fonts
-@import 'https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap';
 
 // use Atkinson Hyperlegible font if available
 // https://fonts.google.com/specimen/Atkinson+Hyperlegible
-$font-family-sans-serif: "Atkinson Hyperlegible";
-
-/*-- scss:rules --*/
-
-body {
-  font-family: 'Atkinson Hyperlegible', sans-serif;
-}
-
-// Optional: Apply to headings
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Atkinson Hyperlegible', sans-serif;
-}
+$font-family-sans-serif: "Atkinson Hyperlegible", sans-serif;
