--- a/custom.scss
+++ b/custom.scss
@@ -8,7 +8,7 @@
 
 
 // use Atkinson Hyperlegible font if available
-$font-family-sans-serif: "Atkinson Hyperlegible", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif: "Atkinson Hyperlegible", sans-serif;
 
 /*-- scss:rules --*/
 // litera is serif by default: revert to san-serif
