--- a/custom.scss
+++ b/custom.scss
@@ -2,16 +2,11 @@
 // import google fonts
 @import 'https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap';
 
-// use Atkinson Hyperlegible font if available
+// use Atkinson Hyperlegible font
 // https://fonts.google.com/specimen/Atkinson+Hyperlegible
-// $font-family-sans-serif: "Atkinson Hyperlegible", sans-serif;
-
-
-// use Atkinson Hyperlegible font if available
 $font-family-sans-serif: "Atkinson Hyperlegible", sans-serif;
 
 /*-- scss:rules --*/
-// litera is serif by default: revert to san-serif
 p {
   font-family: $font-family-sans-serif;
 }
